Updated index page and merged with new gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
     
       <h2>Contact</h2>
       <p> (limcheekin@vobject.com)<br/>      </p>
+
+    <h2>Documentation</h2>
+    <ul>
+      <li><a href="docs/guide/index.html">User Guide</a></a>
+      <li><a href="docs/api/index.html">Java API</a></li>
+      <li><a href="docs/gapi/index.html">Groovy API</a></li>
+    </ul>
     
 
     <h2>Download</h2>
@@ -92,6 +99,6 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 try {
 var pageTracker = _gat._getTracker("UA-16690085-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>"
+} catch(err) {}</script>
 </body>
 </html>
